# JML-TCR

./: .editorconfig  .gitignore  README.md  main.py  pyproject.toml  run.sh
config/: database.yaml  environment.yaml  software.yaml
jml_tcr/: __init__.py  config.py  fastq.py  snakemake.py  system_info.py  tcr.py
template/: samplesheet.tsv  samplesheet.xlsx  snakemake_config.yaml
test/data/: TRB_VDJ_test.fasta
test/tools/: imseq_database_build_test.py  merge_pe_reads.sh  run.sh
tests/: test_config.py  test_fastq.py  test_snakemake.py  test_system_info.py
tools/: README.md  add_cdr3_num.py  calc_freq_and_filter.py  cdr3_displot.py  cdr3_heatmap.py  concat_non_overlap_pe_reads.py  imseq_database_build.py  simulate_fastq.py
tools/merge_no_overlap_reads/: Cargo.toml
tools/merge_no_overlap_reads/src/: main.rs
wf-igblast/: Snakefile
wf-igblast/rules/: concat.smk  fastp.smk  fastqc.smk  flash.smk  fq2fa.smk  igblast.smk  plot.smk  rmdup.smk  stats.smk
wf-igblast/scripts/: add_cdr3_num.py  calc_freq_and_filter.py  cdr3_displot.py  cdr3_heatmap.py  concat.py  parse_fastp_json.py
wf-tcranalyzer/modules/: fastqc.nf
workflow/: Snakefile
workflow/rules/: fastp.smk
workflow/scripts/: parse_fastp_json.py
